--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "pg": "^8.11.0",
     "resend": "^6.8.0",
     "stripe": "^14.0.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -31,6 +32,7 @@
     "@types/node": "^20.10.0",
     "@types/pg": "^8.10.9",
     "@types/uuid": "^9.0.7",
+    "@types/web-push": "^3.6.4",
     "tsx": "^4.7.0",
     "typescript": "^5.3.0"
   }
