--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.0",
     "express-rate-limit": "^8.2.1",
     "grammy": "^1.21.0",
+    "helmet": "^8.1.0",
     "ioredis": "^5.3.0",
     "luxon": "^3.4.0",
     "pg": "^8.11.0",
