--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "worker": "tsx src/worker.ts"
   },
   "dependencies": {
+    "@types/cookie-parser": "^1.4.10",
     "bcrypt": "^6.0.0",
     "bullmq": "^5.0.0",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.3.1",
     "express": "^4.18.0",
     "express-rate-limit": "^8.2.1",
